<?xml version="1.0"?>
<package format="2">
  <name>limo_base</name>
  <version>0.0.0</version>
  <description>ROS driver for limo</description>
  <maintainer email="ning.wang@agilex.ai">agilex</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
