<?xml version="1.0"?>
<package format="2">
  <name>limo_description</name>
  <version>0.0.0</version>
  <description>The limo_description package</description>

  <maintainer email="pengju.du@agilex.ai">agilex</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
