<package>
  <name>double_arm_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for urdf robot</p>
  </description>
  <author>me</author>
  <maintainer email="me2email@qq.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>
