<?xml version="1.0"?>
<package format="2">
  <name>double_arm_teach</name>
  <version>0.0.0</version>
  <description>The double_arm_teach package</description>

  <maintainer email="1692697820@qq.com">Rugels.Dix</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/double_arm_teach</url> -->

  <author email="1692697820@qq.com">Rugels.Dix</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
